<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_fon"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/ruins_preview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/lvl1"
            android:textAllCaps="false"
            android:textColor="@color/Red"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnClose"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/btnClose"
            android:textColor="#000000"
            android:textStyle="bold"
            android:background="@drawable/btn_style"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/difLvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/radioBtnEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radioBtnEasy"
                android:textColor="#FDD835" />

            <RadioButton
                android:id="@+id/radioBtnMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioBtnMedium"
                android:textColor="#FDD835" />

            <RadioButton
                android:id="@+id/radioBtnHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioBtnHard"
                android:textColor="#FDD835" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/StartButton" />
    </LinearLayout>

</LinearLayout>