<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_vin"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/menu_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="end"
        android:layout_weight="20"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/btnDialogClose"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/btn_style"
            android:gravity="center"
            android:text="@string/btnClose"
            android:textColor="#000000"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_menu" />

        <Button
            android:id="@+id/btnCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_character" />
    </LinearLayout>

</LinearLayout>